--- a/index.html
+++ b/index.html
@@ -27,12 +27,10 @@
 
 	<div class="container-fluid">
 		<div class="row">
-			<div class="col-md-8" id="options">
-				
-			</div>
+			<div class="col-md-8" id="options"></div>
 			<div class="col-md-4" id="addOptions">
-				<form id="movie-form">
-				<label for="movie-input">Search for your own Gif's</label>
+				<form id="gif-form">
+				<label for="gif-input">Search for your own Gif's</label>
 				<input type="text" id="gif-input"><br>
 				<!-- Button triggers new movie to be added -->
 				<input id="add-gif" type="submit" value="Search for Gif">
