--- a/index.html
+++ b/index.html
@@ -4,7 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Giphy API Homework</title>
 
+	<!-- External Bootstrap Link -->
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
+
 	<!-- Bootstrap External Link -->
+
 
 	<!-- CSS External Link -->
 
